Case 35827: Fix - field width on Firefox for screens 768 and under on Favorites Matcher

--- a/web/themes/custom/hm-public-theme/static/sass/pages/_my-account.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/pages/_my-account.scss
@@ -51,6 +51,7 @@
         flex: 1;
 
         @media screen and (max-width: 768px) {
+          flex: 1 auto;
           width: 100%;
         }
 
